Fix a panic when initialising the driver.

PR:		18641
Approved by:	re@freebsd.org